--- a/frontend/src/Components/style.css
+++ b/frontend/src/Components/style.css
@@ -188,16 +188,31 @@
   }
 
   .sidebar {
-    width: 100%;  /* Full width */
-    height: 360px; /* Limited height to prevent overlapping */
-    max-height: 350px; /* Prevent sidebar from expanding too much */
+    width: 100%;  
+    height: 360px; 
+    max-height: 150px; 
     flex-direction: column; 
     justify-content: space-between;
     padding: 10px 15px;
     overflow: hidden;
+   
     
   }
 
+
+  .readings-container {
+    padding: 5px;
+  }
+
+  .date-group h2 {
+    font-size: 1rem;
+  }
+
+  .reading-card {
+    min-width: 190px;
+    max-width: 200px;
+    font-size: 0.9rem;
+  }
   .sidebar h2, .sidebar p, .account-info {
    color: #eee;
   }
